--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -143,9 +143,9 @@
     <!-- Tablet search results, no flights available -->
     <string name="tablet_search_results_flights_unavailable">Sorry, no flights are \n currently available.</string>
     <!-- Remove Trip Bucket Flight - Undo messaging -->
-    <string name="tablet_tripbucket_flight_removed">Flight removed from Trip Bucket.</string>
+    <string name="tablet_tripbucket_flight_removed">Flight removed.</string>
     <!-- Remove Trip Bucket Hotel - Undo messaging -->
-    <string name="tablet_tripbucket_hotel_removed">Hotel removed from Trip Bucket.</string>
+    <string name="tablet_tripbucket_hotel_removed">Hotel removed.</string>
 
 
     <!-- Tablet hotel filters -->
